--- a/src/assets/callback.html
+++ b/src/assets/callback.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Finished</title>
     <script>
-        window.opener.postMessage({ code: location.search.match(/code=(\w+)($|&)/)[1] }, location.origin);
+        window.opener.postMessage({ code: location.search.match(/[\?&]code=(\w+)($|&)/)[1] }, location.origin);
         window.close();
     </script>
 </head>
