--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Editor</title>
-  <base href="./">
+  <title>EhTagEditor</title>
+  <base href="/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.proxy.ustclug.org/css?family=Roboto:300,400,500" rel="stylesheet">
-  <link href="https://fonts.proxy.ustclug.org/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
