--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="cnm-Hans">
 <head>
   <meta charset="utf-8">
-  <title>EhTagEditor</title>
+  <title>EhTag Editor</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
