fix referrer, improve copy paste

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="cnm-Hans">
 <head>
   <meta charset="utf-8">
+  <meta name="referrer" content="strict-origin">
   <title>EhTag Editor</title>
   <base href="/">
 
