--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <html>
 
 <head>
-  <meta http-equiv="refresh" content="0;URL='https://editor.ehtt.now.sh'" />
+  <script>
+    location.replace(String(location).replace(/:\/\/ehtagtranslation.github.io\/Editor\//i, '://editor.ehtt.now.sh/'))
+  </script>
 </head>
 
 </html>
