--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 
 <head>
   <script>
-    location.replace(String(location).replace(/:\/\/ehtagtranslation.github.io\/Editor\//i, '://editor.ehtt.now.sh/'))
+    location.replace(String(location).replace(/:\/\/ehtagtranslation.github.io\/Editor\//i, '://ehtt.vercel.app/'))
   </script>
 </head>
 
