--- a/src/browser/index.html
+++ b/src/browser/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cnm-Hans">
+<html lang="cmn-Hans">
   <head>
     <meta charset="utf-8" />
     <meta name="referrer" content="strict-origin" />
